Fixed overflow hidden

--- a/src/components/Work/_styles.scss
+++ b/src/components/Work/_styles.scss
@@ -3,6 +3,7 @@
   background-color: #f6e27f;
   width: 100%;
   padding: 40px 0;
+  overflow: hidden;
 
   &__entry--wrapper {
     margin-bottom: 20px;
